# tsp-python

./: .commit-message.txt  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  conformance.yml  release.yml
conformance/: run_conformance.py
conformance/spec-snapshot/: PROVENANCE.md
tests/: test_canonical.py  test_verify_license.py
tsp_verify/: __init__.py  canonical.py  crypto.py  domains.py  hash.py  license_domain.py  license_schema.py  manifest.py  schema.py  verify_license.py  verify_local.py
