[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-verify"
version = "0.1.0"
description = "Python port of the Trust Standard Protocol (TSP) v3.0 reference verifier core: canonicalization, trust envelope and manifest validation, Ed25519 local verification."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = ["cryptography>=42"]
keywords = ["tsp", "trust", "provenance", "ai", "verification", "ed25519"]

[project.urls]
Homepage = "https://truststandardprotocol.com"
Specification = "https://github.com/Lexi-TSP/tsp-spec"
Repository = "https://github.com/Lexi-TSP/tsp-python"
Issues = "https://github.com/Lexi-TSP/tsp-python/issues"

[tool.setuptools]
packages = ["tsp_verify"]
